--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="text">
                         I'm Rahif and I'm a <span class="typing-2"></span></div>
                     <p>
-                        I am passionate about my work. Because I love what I do, I have a steady source of motivation
+                        I am passionate about my work. Because I love what I do, I have a study source of motivation
                         that drives me to do my best. And I am ambitious and driven. I thrive on challenge and
                         constantly set goals for myself, so I have something to strive towards. I'm not comfortable with
                         settling, and I'm always looking for opportunity to do better and achieve greatness.
