--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="loader-wrapper" id="loader-wrapper">
         <link rel="stylesheet" href="loaderStyle.css">
         <script>
-            <!-- Method 1 -->
+//             Method 1
             $(window).on("load", function () {
                 
                 document.getElementById("loader-wrapper").style.display = "block";
@@ -39,7 +39,7 @@
                 AOS.init();
             }
             
-            <!-- Method 2 -->
+//             Method 2
 //             $(window).on("load", async function () {
 //                 await $(".loader-wrapper").fadeOut("slow");
 //                 document.getElementById("loader-wrapper").remove();
