--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
                                 Web Design</div>
                             <p>
                                 I know to web design myself. And all my websites are completly responsive. I am using
-                                bootstrap to make my web responsive. And I using Anime.js, Three.js, AOS, etc to make my
-                                website to animate elements.
+                                bootstrap to make my web responsive. And I using Anime.js, Three.js, AOS, etc to animate my website.
                             </p>
                         </div>
                     </div>
@@ -159,7 +158,7 @@
                             <div class="text">
                                 Photo Editing</div>
                             <p>
-                                When I am studing in high school education I learned how to use adobe photoshop. And I
+                                I learned myself how to use adobe photoshop. And I
                                 Understood basic and advanced editng on photoshop.
                             </p>
                         </div>
@@ -170,8 +169,8 @@
                             <div class="text">
                                 Web Development</div>
                             <p>
-                                Now I am learning about web development. Learning advanced in node.js with using node.js
-                                express and mongodb. And I am very intresting to research about node.js express.
+                                Now I am learning about web development. So I learning advanced in back-end side with node.js
+                                express, mongodb, etc. And I am very intresting to know more about in server side coding.
                             </p>
                         </div>
                     </div>
@@ -339,7 +338,7 @@
                                     <div class="head">
                                         Email</div>
                                     <div class="sub-title">
-                                        rahifpalliyalil@gmail.com</div>
+                                        <a class="sub-title" href="mailto:rahifpalliyalil@gmail.com">rahifpalliyalil@gmail.com</a></div>
                                 </div>
                             </div>
                         </div>
@@ -377,7 +376,7 @@
 
         <!-- footer section start -->
         <footer>
-            <span>Created By <a href="#">MuhammedRahif</a> | <span class="far fa-copyright"></span> 2020 All rights
+            <span>Created By <a href="mailto:rahifpalliyalil@gmail.com">Muhammed Rahif</a> | <span class="far fa-copyright"></span> 2020 All rights
                 reserved.</span>
         </footer>
     </div>
